# AI_ML_Learning

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
docs/: index.md
docs/theory/: 1_neuron.md  2_cnn.md  3_se_block.md  4_dropout_coadaptation.md  5_rnn.md  6_transformers_attention.md  7_multilayer_perceptrons.md  8_relu_gated.md  adaln_zero.md  bert.md  dit.md  ensemble.md  gan.md  gru.md  lstm.md  resnet.md  swin_transformer.md  transfomers.md  unet.md  vanishing_grad.md  vgg.md  vit.md
notebooks/: SE_resnet.ipynb  cnn.ipynb  lstm_radio.ipynb  lstm_simple.ipynb  resnet.ipynb  swin_tiny.ipynb  vgg.ipynb
search/: search_index.json
src/cnn/: model.py
src/resnet/: model.py
src/swin_tiny/: swin-tiny.py
src/swin_viz/: swin_vz.py
src/vgg/: model.py
stylesheets/: extra.css
theory/1_neuron/: index.html
theory/2_cnn/: index.html
theory/3_se_block/: index.html
theory/4_dropout_coadaptation/: index.html
theory/5_rnn/: index.html
theory/6_transformers_attention/: index.html
theory/7_multilayer_perceptrons/: index.html
theory/8_relu_gated/: index.html
theory/adaln_zero/: index.html
theory/bert/: index.html
theory/dit/: index.html
theory/ensemble/: index.html
theory/gan/: index.html
theory/gru/: index.html
theory/lstm/: index.html
theory/resnet/: index.html
theory/swin_transformer/: index.html
theory/transfomers/: index.html
theory/unet/: index.html
theory/vanishing_grad/: index.html
theory/vgg/: index.html
theory/vit/: index.html
